--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AppActivityLifeCycle</string>
+    <string name="app_name">生命周期和启动模式</string>
 </resources>
