--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">生命周期和启动模式</string>
+    <string name="task_affinity_task">com.lifecycle.launchmode.task_affinity_task</string>
+
 </resources>
+
