--- a/otherapp/app/src/main/res/values/strings.xml
+++ b/otherapp/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">AppLaunchModeDemo2</string>
-    <string name="task_affinity_task">com.pa.chen.task_affinity_task2</string>
-
+    <string name="app_name">LaunchModeDemo</string>
+    <string name="task_affinity_task">com.launchmode.app.taskaffinity</string>
 </resources>
