--- a/otherapp/app/src/main/res/values/strings.xml
+++ b/otherapp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">LaunchModeDemo</string>
+    <string name="app_name">lifecycle_otherapp</string>
     <string name="task_affinity_task">com.launchmode.app.taskaffinity</string>
 </resources>
