--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="app_name_title">生命周期和启动模式</string>
     <string name="task_affinity_task">com.lifecycle.ponent.task_affinity_task</string>
 
-    <string name="str_bottom_a">Home</string>
-    <string name="str_bottom_b">Page</string>
-    <string name="str_bottom_c">Find</string>
-    <string name="str_bottom_d">Mine</string>
+    <string name="str_bottom_a">home</string>
+    <string name="str_bottom_b">page</string>
+    <string name="str_bottom_c">find</string>
+    <string name="str_bottom_d">mine</string>
 </resources>
 
