--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">组件</string>
     <string name="app_name_title">生命周期和启动模式</string>
-    <string name="task_affinity_task">com.lifecycle.ponent.task_affinity_task</string>
+    <string name="task_affinity">com.lifecycle.ponent.task_affinity</string>
 
     <string name="str_bottom_a">home</string>
     <string name="str_bottom_b">page</string>
